GCC Bugzilla – Bug 8799
[3.2/3.3 regression] ICE: Error reporting routines re-entered.
Last modified: 2003-07-25 17:33:46 UTC
"g++ -c ice.ii" ICEs with the error message: ice.ii:2: type specifier omitted for parameter ` Internal compiler error: Error reporting routines re-entered. Please submit a full bug report, with preprocessed source if appropriate. See <URL:http://www.gnu.org/software/gcc/bugs.html> for instructions. at the followig illegal codeline: struct { a(void = 0; a(0), a(0) Release: 3.2.2 20021202 (prerelease) and 3.3 20021202 (experimental) Environment: This bug is independent of system and configuration. How-To-Repeat: See description.
State-Changed-From-To: open->analyzed State-Changed-Why: Confirmed. gcc 2.95.x handles the situation gracefully: bug.cc:2: type specifier omitted for parameter bug.cc:2: parse error at end of input gcc 3.0.x gets confused: bug.cc:2: type specifier omitted for parameter bug.cc:2: parse error at end of input bug.cc:2: confused by earlier errors, bailing out since 3.1 (also with releases!) we have: bug.cc:2: type specifier omitted for parameter ` Internal compiler error: Error reporting routines re-entered. Please submit a full bug report, with preprocessed source if appropriate. See <URL:http://www.gnu.org/software/gcc/bugs.html> for instructions.
Responsible-Changed-From-To: unassigned->gdr Responsible-Changed-Why: Working on a fix.
State-Changed-From-To: analyzed->closed State-Changed-Why: Fixed in both mainline (3.3) and 3.2 branch