re PR c++/8799 (ICE: Error reporting routines re-entered.)

PR C++/8799
        * error.c (dump_expr): Don't ever try to dump a non-existent
        expression.

From-SVN: r59815